overflow fix

--- a/03.website/Splash_v4/css/main.css
+++ b/03.website/Splash_v4/css/main.css
@@ -3,7 +3,7 @@ body {
   /*background-color:#333333;*/
   background-color:#FFFFFF;
   color:#fff;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 
